log
Fri 05 May 2023 01:18:41 PM UTC: 
 tests:  0|5
total_score: 0/70
0da15aa
Fri 05 May 2023 06:28:28 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:54:10: error: unused variable ‘j’ [-Werror=unused-variable]
   54 |   int i ,j;
      |          ^
sudoku.c:54:7: error: unused variable ‘i’ [-Werror=unused-variable]
   54 |   int i ,j;
      |       ^
cc1: all warnings being treated as errors
Compilation failed
99b5650
Fri 05 May 2023 06:29:10 PM UTC: 
 sudoku.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|5
total_score: 0/70
99aee9b
Fri 05 May 2023 06:34:47 PM UTC: 
 sudoku.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
b879b6c
Fri 05 May 2023 06:43:54 PM UTC: 
 sudoku.c | 39 +++++++++++++++++++++++++++++++++++++++
 1 file changed, 39 insertions(+)
 tests:  5|3
total_score: 35/70
3c456ce
Fri 05 May 2023 06:44:54 PM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|3
total_score: 35/70
276a602
Fri 05 May 2023 06:45:31 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:102:37: error: passing argument 1 of ‘is_valid’ makes pointer from integer without a cast [-Werror=int-conversion]
  102 |           if (is_valid(nodo->sudo[i][j])){
      |                        ~~~~~~~~~~~~~^~~
      |                                     |
      |                                     int
sudoku.c:46:20: note: expected ‘Node *’ but argument is of type ‘int’
   46 | int is_valid(Node* n){
      |              ~~~~~~^
cc1: all warnings being treated as errors
Compilation failed
4f551ff
Fri 05 May 2023 06:45:38 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
9c6f730
Fri 05 May 2023 06:45:49 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
ccb062a
